fixed width issue on html, body that was appearing on smaller screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,13 @@
-body {
+html, body {
+    width: 100vw;
+    overflow-x: hidden;
+}
+/* body {
     margin: 0;
     padding: 0;
-}
+    overflow-x: hidden;
+} */
+
 .nav {
     background-color: rgb(56, 63, 30) !important;
     font-family: "Poppins", sans-serif;
@@ -13,29 +19,12 @@ body {
     top: 0;
     width: 100%;
     z-index: 99;
-
 }
 
-/* .container-fluid {
-    font-family: Poppins, sans-serif;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 8px 20px;
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index: 99;
-} */
-
-/* #navbarNav .navbar-nav {
-    display: flex;
-    justify-content: space-between;
-    gap: 15px;
-    align-items: center;
-} */
-
-
+.container, .container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+}
 
 .navbar-brand img {
     width: 100px;
@@ -65,23 +54,33 @@ body {
     text-align: center;
 }
 
+#carouselExample {
+    width: 100%;
+    max-width: 100vw;
+    overflow: hidden;
+}
+
+.carousel {
+    margin-top: 120px;
+}
 
 .carousel-item {
-    transition: transform 2.5s ease-in-out
+    transition: transform 2.5s ease-in-out;
+    width: 100vw;
 }
 
 .carouselPic {
    width: 100%;
-   max-height: 80vh;
+   height: 70vh;
    object-fit: cover;
+}
+@media (max-width: 575px) {
+    .carouselPic {
+        height: 200px;
+    }
 }
 
 #about {
-    /* width: 100%; */
-    /* padding: 50px 0; */
-    /* margin-bottom: 10px; */
-    /* border: 2px solid green; */
-    
     padding: 2.5rem;
     display: flex;
     align-items: center;
@@ -89,32 +88,15 @@ body {
     gap: 40px;
 }
 
-/* .about {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    max-width: 1400px;
-    margin: 0 auto;
-    gap: 60px;
-    padding: 50px;
-} */
+
 
 /* Left Side (images) */
 .aboutImages {
-    /* display: flex; */
-    /* width: 60%; */
-    /* height: 600px; */
-    /* gap: 20px; */
-
     display: flex;
     width: 50%;
     justify-content: space-between;
     gap: 20px;
 }
-
-/* .aboutImages div {
-    flex: 1;
-} */
 
 .aboutImages img {
     width: 50%;
@@ -123,32 +105,14 @@ body {
     object-fit: cover;
 }
 
-/* img {
-    vertical-align: middle;
-    overflow-clip-margin: content-box;
-    overflow: clip;
-} */
-
 /* Right side (text) */
 .aboutText {
-    /* width: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    text-align: center;
-    padding-left: 40px; */
-    
     width: 50%;
     text-align: center;
     margin: auto;
 }
 
 .aboutText h3 {
-    /* margin-bottom: 15px;
-    font-family: Bebas Neue, sans-serif;
-    font-size: 52px;
-    font-weight: 700;
-    letter-spacing: 1px; */
     font-size: 52px;
     font-weight: 700;
     font-family: "Bebas Neue", sans-serif;
@@ -156,15 +120,10 @@ body {
 }
 
 .aboutText p {
-    /* margin: 0 0 10px; */
-    /* margin-bottom: 20px; */
     font-size: 14px;
     line-height: 1.5;
     color: gray;
     letter-spacing: .15rem;
-    
-    
-    
 }
 
 .aboutBtn {
@@ -175,12 +134,9 @@ body {
     background-color: #ff9f10;
     color: #fff;
     border: 2px solid #ff9f10;
-    
-    /* width: 50%; */
     cursor: pointer;
     border-radius: 5px;
     transition: background 0.3s;
-    /* display: block; */
 }
 
 .aboutBtn:hover {
@@ -253,9 +209,6 @@ body {
     padding: 2.5rem;
     display: grid;
     margin: auto;
-    /* border: 2px solid red; */
-    /* display: grid;
-    margin: auto; */
 }
 
 .quotation {
@@ -271,12 +224,7 @@ body {
     font-size: 40px;
     letter-spacing: 1px;
     font-family: "Bebas Neue", sans-serif;
-    /* margin: 20px */
 }
-
-/* .quoteH3 h3 {
-    display: block;
-} */
 
 .pCite {
     text-align: center;
@@ -287,10 +235,6 @@ body {
 }
 
 .quotationEnd {
-    /* display: block;
-    text-align: end;
-    margin: 0;
-    padding: 0; */
     color: #ff9f10;
     font-size: 180px;
     height: 125px;
@@ -484,10 +428,6 @@ body {
     align-items: center;
     gap: 20px;
 }
-
-/* .contact a img {
-    width: 2rem;
-} */
 
 .closingLiner {
     display: flex;
